- Fix css on small-screen

--- a/src/app/features/admin/admin.component.scss
+++ b/src/app/features/admin/admin.component.scss
@@ -44,7 +44,7 @@
       margin: 15px;
       display: flex;
       flex: 1;
-      overflow: auto;
+      overflow-y: auto;
 
       @include small-screen {
         margin: 0;
@@ -54,6 +54,8 @@
         display: flex;
         flex-direction: row;
         flex: 1;
+        max-width: 100%;
+
         @include small-screen {
           flex-direction: column;
         }
